--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Fi-Writer</title>
   <meta name="description" content="Your app description">
-  <link rel="icon" href="/icons/favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="favicon.png" type="image/svg+xml">
   <link rel="alternate icon" href="/icons/favicon.ico" type="image/png" sizes="16x16">
   <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" sizes="180x180">
-  <link rel="mask-icon" href="/icons/favicon.svg" color="#fff2d6">
+  <link rel="mask-icon" href="favicon.png" color="#fff2d6">
   <meta name="theme-color" content="#ffffff">
 </head>
 
