--- a/index.html
+++ b/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Fi-Writer</title>
+    <meta name="description" content="Your app description" />
+    <link rel="icon" href="icons/favicon.png" type="image/svg+xml" />
+    <link
+      rel="alternate icon"
+      href="icons/favicon.ico"
+      type="image/png"
+      sizes="16x16"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="icons/apple-touch-icon.png"
+      sizes="180x180"
+    />
+    <link rel="mask-icon" href="icons/favicon.png" color="#fff2d6" />
+    <meta name="theme-color" content="#ffffff" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Fi-Writer</title>
-  <meta name="description" content="Your app description">
-  <link rel="icon" href="favicon.png" type="image/svg+xml">
-  <link rel="alternate icon" href="/icons/favicon.ico" type="image/png" sizes="16x16">
-  <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" sizes="180x180">
-  <link rel="mask-icon" href="favicon.png" color="#fff2d6">
-  <meta name="theme-color" content="#ffffff">
-</head>
-
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
-</body>
-
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
