--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <meta name="theme-color" content="#ffffff" />
   </head>
 
-  <body>
-    <div id="root"></div>
+  <body style="margin: 0; padding: 0">
+    <div id="app-root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
