--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
   <body style="margin: 0; padding: 0">
     <div id="app-root"></div>
+    <div id="portal"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
